tests/resource/valid/collection/dictionary_builder.mamba
def j := { 20, 30, 40 }

def i := { x => x + 10 | x in j }
