tests/resource/invalid/type/collection/dictionary_builder_nested.mamba
def a := { 20, 30, 40 }
def b := { "do", "re", "mi" }

def k := { { x => y | x in a } | y in b }
